--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  hello world hello wrold
+  <div class="pull">
+    hello world
+  </div>
 </body>
 </html>
