--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
-<body>
-  <div class="pull">
-    privet
-    privet
+<header class="header">
+  <div class="header__inner container">
+    <a class="header__logo" href="/">
+      <img src="./images/logo.svg" alt="Glacy logo" width="115" height="34" loading="lazy" class="logo-image">
+    </a>
+    <nav class="header__menu">
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="#dest-block" data-block-id="dest">Desitnations</a>
+        </li>
+        <li class="header__item">
+          <a href="#steps-block" data-block-id="steps">Hotels</a>
+        </li>
+        <li class="header__item">
+          <a href="#offer-block" data-block-id="offer">flights</a>
+        </li>
+        <li class="header__item">
+          <a href="#feedback-block" data-block-id="feedback">Bookings</a>
+        </li>
+        <li class="header__item">
+          <a href="#subscribe-block" data-block-id="subscribe">Login</a>
+        </li>
+        <li class="header__item">
+          <a href="#">Sign Up</a>
+        </li>
+        <li class="header__item">
+          <a href="Change#">EN</a>
+        </li>
+      </ul>
+    </nav>
   </div>
+
+</header>
+
+<body>
+
 </body>
+
 </html>
